# LSTM_ASCII_maps

./: CMakeLists.txt  README.md  open_nets.sh  open_script.sh
Datasets/Train_inputs-10_10240-300-5-2-22-22-13-lmdb/: data.mdb  lock.mdb
Datasets/Train_inputs-10_102400-300-5-2-20-0-55-lmdb/: lock.mdb
Datasets/Train_inputs-10_1024000-300-20-2-27-5-41-lmdb/: lock.mdb
Datasets/Train_inputs-10_409600-300-10-2-26-16-27-lmdb/: lock.mdb
Datasets/Train_inputs-10_51200-300-5-2-23-11-45-lmdb/: data.mdb  lock.mdb
Datasets/Train_inputs-11_102400-300-5-2-20-20-34-lmdb/: lock.mdb
Datasets/Train_inputs-11_102400-300-5-2-23-19-0-lmdb/: lock.mdb
Datasets/Train_inputs-11_1024000-300-20-2-27-8-16-lmdb/: lock.mdb
Datasets/Train_inputs-11_409600-300-10-2-26-16-59-lmdb/: Readme  lock.mdb
Datasets/Train_inputs-12_102400-300-5-2-22-21-20-lmdb/: lock.mdb
Datasets/Validate_inputs-10_1024-300-2-3-22-22-13-lmdb/: data.mdb  lock.mdb
Datasets/Validate_inputs-10_10240-300-2-3-20-0-55-lmdb/: Preweights  data.mdb  lock.mdb
Datasets/Validate_inputs-10_102400-300-2-10-27-5-41-lmdb/: lock.mdb
Datasets/Validate_inputs-10_40960-300-2-5-26-16-27-lmdb/: data.mdb  lock.mdb
Datasets/Validate_inputs-10_5120-300-2-3-23-11-45-lmdb/: data.mdb  lock.mdb
Datasets/Validate_inputs-11_10240-300-2-3-20-20-34-lmdb/: data.mdb  lock.mdb
Datasets/Validate_inputs-11_10240-300-2-3-23-19-0-lmdb/: PREWEIGHTS  data.mdb  lock.mdb
Datasets/Validate_inputs-11_102400-300-2-10-27-8-16-lmdb/: lock.mdb
Datasets/Validate_inputs-11_40960-300-2-5-26-16-59-lmdb/: data.mdb  lock.mdb
Datasets/Validate_inputs-12_10240-300-2-3-22-21-20-lmdb/: data.mdb  lock.mdb
MLP/: deepFF_net.prototxt  mlp_solver.prototxt  single_net.prototxt
RecurrentNets/: RNN_net.prototxt  deep_rnn_solver.prototxt  deep_stack_rnn_net.prototxt  deep_stack_rnn_testnet.prototxt
RecurrentNets/LSTM/: deep_lstm-channels_solver.prototxt  deep_lstm_solver.prototxt  (+21 more)
libs/: CMakeLists.txt  cmake_install.cmake
libs/NeuralNetwork/: Build_set.cpp  CMakeLists.txt  Common_net.cpp  Common_net.hpp  TrainVal_db.cpp  TrainValidateRNN.cpp  TrainValidateRNN.hpp  build_db.cpp  cmake_install.cmake
logs/: TestNeuralNetwork.ERROR  TestNeuralNetwork.FATAL  TestNeuralNetwork.INFO  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180220-012303.30988  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180220-012457.31016  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180221-181555.26758  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180222-225543.25549  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180223-145639.2049  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180223-145750.2079  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180223-145815.2094  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180223-201236.7038  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180306-060812.19581  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180306-104733.27366  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180307-154857.10735  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180309-004712.27668  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180309-013806.29490  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180309-014028.29601  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180309-184502.4712  TestNeuralNetwork.LEONIDA.leonida.log.ERROR.20180310-032650.16677  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180221-181412.26729  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180222-205448.31651  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180222-205503.31665  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180223-030606.28262  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180223-145715.2063  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180223-155632.2783  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180306-104500.27333  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180306-105221.27398  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180306-105255.27411  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180307-154152.10490  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180307-154218.10507  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180308-090206.18415  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180309-005056.27714  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180309-005242.27731  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180309-005803.28018  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180309-010138.28046  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180309-010539.28062  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180309-010731.28139  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180309-010841.28208  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180309-014755.29792  TestNeuralNetwork.LEONIDA.leonida.log.FATAL.20180309-021444.30003  (+426 more)
matlab_plot/: Solid_stack+out  Test_LSTM_100units_T10_50.m  Test_LSTM_STACK_new  Test_LSTM_deep_out.m  Test_LSTM_stack.m  Test_LSTM_stack_new.m  Test_MLP_stage0.m  Test_RNN_200units_50.m
src/: CMakeLists.txt  TestNeuralNetwork.cpp
src/app/: CMakeLists.txt~  Makefile  TestAstar.cpp  TestNeuralNetwork.cpp  TestRRT.cpp  cmake_install.cmake
src/include/: Scenario.h
src/include/NeuralNetwork/: Build_set.h  TrainVal.h
src/include/Offline/: Astar.h  offline_search.h
src/include/SearchAgent/: Astar.h  search_agent.h
src/src/: CMakeLists.txt  Makefile  Scenario.cpp
src/src/NeuralNetwork/: Build_db.cpp  Build_set.cpp  Makefile  OnlineNN.cpp  TrainOnline.cpp  TrainVal_db.cpp
src/src/Offline/: Astar.cpp  offline_search.cpp
src/src/SearchAgent/: Astar.cpp  CMakeLists.txt  RRT.cpp  search_agent.cpp
(+2685 files in other folders)
